--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><base href="/perfcompare"/><link rel="icon" href="/perfcompare/favicon.svg" type="image/svg+xml"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/perfcompare/favicon.svg"/><link rel="manifest" href="/perfcompare/manifest.json"/><title>PerfCompare</title><script defer="defer" src="/perfcompare/static/js/main.7562eb15.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <base href="https://mozilla.github.io/perfcompare" />
+    <link
+      rel="icon"
+      href="https://mozilla.github.io/perfcompare/favicon.svg"
+      type="image/svg+xml"
+    />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://mozilla.github.io/perfcompare/favicon.svg"
+    />
+    <link
+      rel="manifest"
+      href="https://mozilla.github.io/perfcompare/manifest.json"
+    />
+    <title>PerfCompare</title>
+    <script
+      defer="defer"
+      src="https://mozilla.github.io/perfcompare/static/js/main.7562eb15.js"
+    ></script>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
